--- a/deploy/k8s/base/network-policy.yaml
+++ b/deploy/k8s/base/network-policy.yaml
@@ -1,178 +1,11 @@
-apiVersion: networking.k8s.io/v1
-kind: NetworkPolicy
-metadata:
-  name: oran-vnf-operator-policy
-  namespace: oran-mano
-  labels:
-    app.kubernetes.io/name: oran-vnf-operator
-    app.kubernetes.io/component: vnf-operator
-spec:
-  podSelector:
-    matchLabels:
-      app.kubernetes.io/name: oran-vnf-operator
-  policyTypes:
-  - Ingress
-  - Egress
-  ingress:
-  # Allow metrics scraping from Prometheus
-  - from:
-    - namespaceSelector:
-        matchLabels:
-          name: monitoring
-    - podSelector:
-        matchLabels:
-          app: prometheus
-    ports:
-    - protocol: TCP
-      port: 8080
-  # Allow health checks from within namespace
-  - from:
-    - podSelector: {}
-    ports:
-    - protocol: TCP
-      port: 8081
-  # Allow webhook calls from API server
-  - from:
-    - namespaceSelector: {}
-    ports:
-    - protocol: TCP
-      port: 9443
-  egress:
-  # Allow DNS
-  - to:
-    - namespaceSelector:
-        matchLabels:
-          name: kube-system
-    - podSelector:
-        matchLabels:
-          k8s-app: kube-dns
-    ports:
-    - protocol: UDP
-      port: 53
-    - protocol: TCP
-      port: 53
-  # Allow communication with RAN DMS
-  - to:
-    - podSelector:
-        matchLabels:
-          app.kubernetes.io/name: oran-ran-dms
-    ports:
-    - protocol: TCP
-      port: 8080
-  # Allow communication with Porch
-  - to:
-    - namespaceSelector:
-        matchLabels:
-          name: porch-system
-    - podSelector:
-        matchLabels:
-          app: porch-server
-    ports:
-    - protocol: TCP
-      port: 7007
-  # Allow Kubernetes API access
-  - to:
-    - namespaceSelector: {}
-      podSelector:
-        matchLabels:
-          component: kube-apiserver
-    ports:
-    - protocol: TCP
-      port: 443
-    - protocol: TCP
-      port: 6443
----
-apiVersion: networking.k8s.io/v1
-kind: NetworkPolicy
-metadata:
-  name: oran-orchestrator-policy
-  namespace: oran-mano
-  labels:
-    app.kubernetes.io/name: oran-orchestrator
-    app.kubernetes.io/component: orchestrator
-spec:
-  podSelector:
-    matchLabels:
-      app.kubernetes.io/name: oran-orchestrator
-  policyTypes:
-  - Ingress
-  - Egress
-  ingress:
-  # Allow HTTP traffic from within namespace
-  - from:
-    - podSelector: {}
-    ports:
-    - protocol: TCP
-      port: 8080
-  # Allow metrics scraping from Prometheus
-  - from:
-    - namespaceSelector:
-        matchLabels:
-          name: monitoring
-    - podSelector:
-        matchLabels:
-          app: prometheus
-    ports:
-    - protocol: TCP
-      port: 9090
-  egress:
-  # Allow DNS
-  - to:
-    - namespaceSelector:
-        matchLabels:
-          name: kube-system
-    - podSelector:
-        matchLabels:
-          k8s-app: kube-dns
-    ports:
-    - protocol: UDP
-      port: 53
-    - protocol: TCP
-      port: 53
-  # Allow communication with O2IMS
-  - to:
-    - podSelector:
-        matchLabels:
-          app.kubernetes.io/name: o2ims-server
-    ports:
-    - protocol: TCP
-      port: 5005
-  # Allow communication with RAN DMS
-  - to:
-    - podSelector:
-        matchLabels:
-          app.kubernetes.io/name: oran-ran-dms
-    ports:
-    - protocol: TCP
-      port: 8080
-  # Allow communication with CN DMS
-  - to:
-    - podSelector:
-        matchLabels:
-          app.kubernetes.io/name: oran-cn-dms
-    ports:
-    - protocol: TCP
-      port: 8080
-  # Allow communication with Porch
-  - to:
-    - namespaceSelector:
-        matchLabels:
-          name: porch-system
-    - podSelector:
-        matchLabels:
-          app: porch-server
-    ports:
-    - protocol: TCP
-      port: 7007
----
-# Default deny-all policy for namespace
-apiVersion: networking.k8s.io/v1
-kind: NetworkPolicy
-metadata:
-  name: default-deny-all
-  namespace: oran-mano
-spec:
-  podSelector: {}
-  policyTypes:
-  - Ingress
-  - Egress
+# DEPRECATED: This file has been superseded by network-policies.yaml
+#
+# The enhanced NetworkPolicy definitions with improved security can be found in:
+# - network-policies.yaml (comprehensive policies for all services)
+# - NETWORK_SECURITY.md (detailed documentation)
+#
+# This file is kept for reference but should not be applied.
+# Use: kubectl apply -f network-policies.yaml
+
+# Legacy NetworkPolicy definitions - DO NOT USE
+# Refer to network-policies.yaml for current security-enhanced policies
