--- a/nlp/requirements.txt
+++ b/nlp/requirements.txt
@@ -1,5 +1,12 @@
-pyyaml>=6.0
-jsonschema>=4.17.3
-pytest>=7.2.0
-pytest-cov>=4.0.0
-redis>=4.5.1
+# NLP module dependencies with pinned versions for security
+pyyaml==6.0.2
+jsonschema==4.23.0
+pytest==7.4.4
+pytest-cov==4.0.0
+redis==5.0.8
+# Security-focused dependencies
+cryptography==42.0.8
+urllib3==2.2.2
+requests==2.32.3
+certifi==2024.7.4
+idna==3.7
